fix footer logos sizing on mobile

--- a/client/src/features/Footer/styles.scss
+++ b/client/src/features/Footer/styles.scss
@@ -10,6 +10,10 @@
   & > div {
     margin: 5px 20px;
   }
+
+  a {
+    color: $white !important;
+  }
 }
 
 .footer-social {
@@ -30,7 +34,7 @@
 
 .footer-logo {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
 
   img {
